--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,11 @@
 
 # Site settings
 title: Travelog
-author: Your name
-author_link: https://whatever.you/like
-author_description: A few words to describe you & your face
+author: Neha Kompella
+author_link: nkompella.github.io
+author_description: Already in love with places I've never been to
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 
